# custom_msgs

custom_msgs_ros1/: CMakeLists.txt  package.xml
custom_msgs_ros2/: CMakeLists.txt  package.xml
custom_msgs_ros2/srv/: SetBoundingBox.srv
